--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "cra-template-typescript": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
+    "react-responsive": "^10.0.0",
     "react-router": "^7.1.1",
+    "react-router-dom": "^6.28.1",
     "react-scripts": "5.0.1"
   },
   "scripts": {
@@ -34,6 +37,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^19.0.4",
+    "@types/react-dom": "^19.0.2",
     "web-vitals": "^4.2.4"
   }
 }
