--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-native": "^0.72.8",
     "cra-template-typescript": "1.2.0",
     "file-loader": "^6.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-icons": "^5.4.0",
     "react-responsive": "^10.0.0",
-    "react-router": "^7.1.1",
-    "react-router-dom": "^6.28.1",
-    "react-scripts": "5.0.1"
+    "react-router": "^5.3.1",
+    "react-router-dom": "^5.2.1",
+    "react-scripts": "5.0.1",
+    "semantic-ui-react": "^2.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,6 +42,7 @@
   "devDependencies": {
     "@types/react": "^19.0.4",
     "@types/react-dom": "^19.0.2",
+    "@types/react-router-dom": "^5.3.3",
     "web-vitals": "^4.2.4"
   }
 }
