--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/react-native": "^0.72.8",
+    "axios": "^1.7.9",
     "cra-template-typescript": "1.2.0",
     "file-loader": "^6.2.0",
     "react": "^18.0.0",
@@ -13,7 +14,8 @@
     "react-router": "^5.3.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.1",
-    "semantic-ui-react": "^2.1.5"
+    "semantic-ui-react": "^2.1.5",
+    "typescript": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
