--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "react-dom": "^18.0.0",
     "react-icons": "^5.4.0",
     "react-responsive": "^10.0.0",
-    "react-router": "^5.3.1",
-    "react-router-dom": "^5.2.1",
-    "react-scripts": "5.0.1",
+    "react-router": "^7.5.3",
+    "react-router-dom": "^7.5.3",
+    "react-scripts": "^5.0.1",
     "semantic-ui-react": "^2.1.5",
     "typescript": "^3.2.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
